lots of styling

--- a/index.html
+++ b/index.html
@@ -7,29 +7,35 @@
     <title>Pace Calculator</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="shortcut icon" href="images/favicon-32.png" sizes="32x32">
-    <link rel="shortcut icon" href="images/favicon-128.png" sizes="128x128">
-    <link rel="shortcut icon" href="images/favicon-180.png" sizes="180x180">
-    <link rel="shortcut icon" href="images/favicon-192.png" sizes="192x192"> -->
+    <!-- Profile picture/favicon created by M.J. Brechner © 2022 -->
+    <link rel="shortcut icon"
+        href="https://raw.githubusercontent.com/mjbrechner/diacritics-eraser/main/images/profile-pic.png">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <h1>Pace Calculator</h1>
     </header>
-    <p id="current-date"></p>
-    <p id="place-in-year"></p>
-    <p id="remaining-in-year"></p>
-    <p>Type in a number of accomplishments (e.g. books read, days exercised, etc.) to check your current annual pace.</p>
-    <div class="pace-area"> <textarea id="number-input-area" maxlength="5"></textarea>
-        <p id="pace-results"></p>
-    </div>
-
+    <main>
+        <p id="current-date"></p>
+        <p id="place-in-year"></p>
+        <p id="remaining-in-year"></p>
+        <p>Type in a number of accomplishments (e.g. books read, days exercised, etc.) to check your current annual
+            pace.
+        </p>
+        <div class="pace-area"> <textarea aria-label="text input box" id="number-input-area" maxlength="5"></textarea>
+            <p id="pace-results"></p>
+        </div>
+    </main>
     <footer>
         <p>© 2022 <a href="https://github.com/mjbrechner">M.J. Brechner</a></p>
-        <!-- Profile picture created by M.J. Brechner © 2022 -->
-        <img class="profile-pic"
+        <!-- Profile picture/favicon created by M.J. Brechner © 2022 -->
+        <img class="profile-pic" alt="profile picture"
             src="https://raw.githubusercontent.com/mjbrechner/diacritics-eraser/main/images/profile-pic.png">
     </footer>
     </footer>
