worked on team wins + losses, but not enabled them yet

--- a/index.html
+++ b/index.html
@@ -42,9 +42,18 @@
             </div>
             <div class="baseball-inner">
                 <p>Number of team games completed:</p>
-                <div class="pace-area"> <textarea aria-label="text input box" id="games-input-area"
-                        maxlength="10"></textarea></div>
+                <div class="pace-area games-area"> <textarea aria-label="text input box" id="games-input-area"
+                        maxlength="5"></textarea></div>
             </div>
+            <!-- <h3 class="or-area">or</h3>
+            <div class="baseball-inner">
+                <p>team wins:</p>
+                <div class="pace-area games-area"> <textarea aria-label="text input box" id="wins-input-area"
+                        maxlength="5"></textarea></div>
+                <p>+ team losses:</p>
+                <div class="pace-area games-area"> <textarea aria-label="text input box" id="losses-input-area"
+                        maxlength="5"></textarea></div>
+            </div> -->
             <div class="baseball-inner">
                 <!-- <button onclick="baseballCalculate()">calculate</button> -->
                 <p id="baseball-results"></p>
