--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="pace-area games-area"> <textarea aria-label="text input box" id="games-input-area"
                         maxlength="5"></textarea></div>
             </div>
-            <!-- <h3 class="or-area">or</h3>
+            <h3 class="or-area">or</h3>
             <div class="baseball-inner">
                 <p>team wins:</p>
                 <div class="pace-area games-area"> <textarea aria-label="text input box" id="wins-input-area"
@@ -53,7 +53,7 @@
                 <p>+ team losses:</p>
                 <div class="pace-area games-area"> <textarea aria-label="text input box" id="losses-input-area"
                         maxlength="5"></textarea></div>
-            </div> -->
+            </div>
             <div class="baseball-inner">
                 <!-- <button onclick="baseballCalculate()">calculate</button> -->
                 <p id="baseball-results"></p>
