styling for baseball section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <div id="baseball">
             <div class="baseball-title">
+                <div id="x-out" onclick="baseballToggleOff()">&#9746;</div>
                 <h2>Baseball Season Pace Calculator</h2>
-                <div id="x-out" onclick="baseballToggleOff()">x</div>
             </div>
             <div class="baseball-inner">
                 <p>Type in current stat:</p>
