styling for baseball button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <h1>Pace Calculator</h1>
-        <button id="baseball-button" onclick="baseballToggleOn()">baseball pace calculator</button>
+        <button id="baseball-button" onclick="baseballToggleOn()">⚾ baseball ⚾<br> seasonal pace</button>
     </header>
     <main>
         <p id="current-date"></p>
@@ -36,7 +36,7 @@
         <div id="baseball">
             <div class="baseball-title">
                 <div id="x-out" onclick="baseballToggleOff()">&#9746;</div>
-                <h2>Baseball Season Pace Calculator</h2>
+                <h2>Baseball Seasonal Pace Calculator</h2>
             </div>
             <div class="baseball-inner">
                 <p>Type in current stat:</p>
